--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -1,18 +1,58 @@
 <mat-toolbar> <span>LOGIN</span> </mat-toolbar>
 <mat-card class="my-card">
   <mat-card-content>
-    <form class="my-form">
+    <form
+      (ngSubmit)="loginUser(loginForm)"
+      class="my-form"
+      [formGroup]="myform"
+    >
       <mat-form-field class="full-width">
         <mat-label>Email</mat-label>
-        <input matInput placeholder="Email" name="email" />
+        <input
+          matInput
+          required
+          [email]="loginForm.username !== ''"
+          placeholder="Username"
+          name="username"
+          id="username"
+          [(ngModel)]="loginForm.username"
+          formControlName="username"
+        />
+        <mat-error
+          *ngIf="
+            myform.controls.username.errors?.required &&
+            myform.controls.username.touched
+          "
+          >Email is required</mat-error
+        >
+        <mat-error
+          *ngIf="
+            myform.controls.username.errors?.email &&
+            myform.controls.username.touched
+          "
+          >Invalid email</mat-error
+        >
       </mat-form-field>
+
       <mat-form-field class="full-width">
         <mat-label>Password</mat-label>
-        <input matInput placeholder="Password" name="password" />
+        <input
+          matInput
+          required
+          type="password"
+          placeholder="Password"
+          name="password"
+          id="password"
+          [(ngModel)]="loginForm.password"
+          formControlName="password"
+        />
+        <mat-error *ngIf="myform.controls.password.invalid"
+          >Password is required</mat-error
+        >
       </mat-form-field>
     </form>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-raised-button (click)="login()" color="primary">LOGIN</button>
+    <button mat-raised-button color="primary">LOGIN</button>
   </mat-card-actions>
 </mat-card>
