--- a/src/layout/layout.component.html
+++ b/src/layout/layout.component.html
@@ -1,9 +1,58 @@
-<mat-toolbar color="primary">
+<!-- <mat-toolbar color="primary">
   <mat-toolbar-row>
-    <!--  <span>HOME</span> -->
+
     <span><a href="/">HOME</a></span> <span class="spacer"></span>
     <a mat-button routerLink="/register">Register</a>
     <a mat-button routerLink="/login">Login</a>
+  </mat-toolbar-row>
+</mat-toolbar>
+ -->
+
+<mat-toolbar color="primary">
+  <mat-toolbar-row>
+    <span class="spacer"></span> <span>Shopping Cart</span>
+    <span class="example-fill-remaining-space"></span>
+    <span class="align-center"></span> <span class="example-spacer"></span>
+
+    <a mat-button routerLink="/register">Register</a>
+    <a mat-button routerLink="/login">Login</a>
+    <mat-icon
+      matTooltip="Cart"
+      aria-label="Button that displays a tooltip when focused or hovered over"
+      class="Cart"
+      matBadge="{{ CartItem }}"
+      matBadgeColor="warn"
+      >shopping_cart</mat-icon
+    >
+    <button mat-icon-button [matMenuTriggerFor]="menu">
+      <mat-icon>more_vert</mat-icon>
+    </button>
+    <mat-menu #menu="matMenu">
+      <button mat-menu-item routerLink="/login" *ngIf="Username == null">
+        <mat-icon>person_outline</mat-icon>
+        <span>Login</span>
+      </button>
+      <button mat-menu-item routerLink="/register" *ngIf="Username == null">
+        <mat-icon>group_add</mat-icon>
+        <span>Registration</span>
+      </button>
+      <button mat-menu-item *ngIf="Username != null" (click)="Logout()">
+        <mat-icon>block</mat-icon>
+        <span>Logout</span>
+      </button>
+      <button mat-menu-item *ngIf="Username != null">
+        <mat-icon>account_circle</mat-icon>
+        <span>{{ Username }}</span>
+      </button>
+      <!-- <button mat-menu-item *ngIf="Role == 'Admin'" routerLink="/dashboard">
+        <mat-icon>voicemail</mat-icon>
+        <span>Admin Dashboard</span>
+      </button>
+      <button mat-menu-item *ngIf="Username != null" routerLink="/viewprofile">
+        <mat-icon>mood</mat-icon>
+        <span>Your Profile</span>
+      </button> -->
+    </mat-menu>
   </mat-toolbar-row>
 </mat-toolbar>
 <router-outlet></router-outlet>
