--- a/src/layout/layout.component.html
+++ b/src/layout/layout.component.html
@@ -17,6 +17,7 @@
     <a mat-button routerLink="/register">Register</a>
     <a mat-button routerLink="/login">Login</a>
     <mat-icon
+      routerLink="/cart"
       matTooltip="Cart"
       aria-label="Button that displays a tooltip when focused or hovered over"
       class="Cart"
