--- a/src/app/component/user/cart/cart.component.html
+++ b/src/app/component/user/cart/cart.component.html
@@ -51,6 +51,10 @@
       </button>
     </td>
   </ng-container>
+  <!-- <ng-container matColumnDef="subtotal">
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell>{{ SubTotal | number }} ₹</td>
+  </ng-container> -->
   <!-- <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef>Name</th>
     <td mat-cell *matCellDef="let element">{{ element.name }}</td>
@@ -71,3 +75,15 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 </table>
+
+<mat-list>
+  <mat-list-item>Sub Total : {{ SubTotal | number }} ₹</mat-list-item>
+  <mat-divider></mat-divider>
+  <mat-list-item>Shipping : {{ ShippingCharge | number }} ₹</mat-list-item>
+  <mat-divider></mat-divider>
+  <mat-list-item
+    ><h3>
+      <strong>Total : {{ SubTotal + ShippingCharge | number }} ₹</strong>
+    </h3></mat-list-item
+  >
+</mat-list>
